# celsium

./: .gitignore  Cargo.toml  README.md
docs/: docusaurus.config.ts
docs/docs/: intro.md  variables.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/css/: custom.css
docs/src/pages/: index.tsx
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: bytecode.rs  lib.rs  module.rs
lib/src/block/: array.rs  mod.rs
lib/src/bytecode_parser/: mod.rs
lib/src/compiletime_helper/: mod.rs
lib/src/std/: mod.rs
lib/src/stores/: mod.rs  variable_store.rs
lib/src/typestack/: mathops.rs  mod.rs
lib/src/vm/: array.rs  format_for_print.rs  math_operators.rs  mod.rs  vm.rs
src/: block.rs  bytecode.rs  compile_time_checker.rs  lib.rs  module.rs  typestack.rs
src/block/: array.rs  mod.rs
src/compiletime_helper/: mod.rs
src/vm/: array.rs  format_for_print.rs  math_operators.rs  mod.rs  vm.rs
