[package]
name = "celsium"
description = "A library for building interpreters"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/MarcisAn/celsium"
repository = "https://github.com/MarcisAn/celsium"
readme = "README.md"
keywords = ["interpreters", "languages", "stack", "bytecode", "stack"]

[dependencies]
num = "0.4.1"
