[package]
name = "celsium"
description = "A library for building interpreters"
version = "0.1.5"
edition = "2021"
license = "MIT"
homepage = "https://github.com/MarcisAn/celsium"
repository = "https://github.com/MarcisAn/celsium"
readme = "README.md"
keywords = ["interpreters", "languages", "stack", "bytecode", "stack"]

[dependencies]
num = "0.4.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
