[package]
name = "celsium"
description = "A library for building interpreters"
version = "0.1.6"
edition = "2021"
license = "MIT"
homepage = "https://github.com/MarcisAn/celsium"
repository = "https://github.com/MarcisAn/celsium"
readme = "README.md"
keywords = ["interpreters", "languages", "stack", "bytecode", "stack"]

[dependencies]
num = {version = "0.4.1", features = ["serde"]}
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
serde = {version  = "1.0.199", features = ["derive"]}
serde_json = "1.0.116"
